--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="col-lg-8 text-center">
                         <h2 class="text-white mt-0">Regisztráció</h2>
                         <hr class="divider divider-light" />
-                        <a class="btn btn-light btn-xl" href="https://forms.gle/LggVWNZaDGDJGMkDA">Registrálj!</a>
+                        <a class="btn btn-light btn-xl" href="https://forms.gle/LggVWNZaDGDJGMkDA">Regisztrálj!</a>
                     </div>
                 </div>
             </div>
