--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6 text-center">
                         <div class="mt-5">
-                            <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
+                            <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">24/7 szerver</h3>
                             <p class="text-muted mb-0">Szervered egész nap fut ingyen. Panelben érheted el a szerver konzolt / file-okat.</p>
                         </div>
